[WangRan] fix-3: improve alignment

--- a/client/styles/index.css
+++ b/client/styles/index.css
@@ -27,17 +27,16 @@ header{
 .search-box{
   display: flex;
   align-items: center;
-  margin-right: 100px;
   padding: 5px 15px;
+  margin-right: 5%;
   border: 1px solid grey;
   border-radius: 25px;
 }
 
 .logo-font {
-  margin-left: 100px;
-  /* display: inline-block; */
   color: #000000;
   padding: 5px 8px;
+  margin-left: 5%;
   font-weight: bolder;
   font-size: 20px;
   border-radius: 5px;
